# uoslife-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 7f12a8f6cbf9_change_embedding_id_to_uuid.py  93e67fc66005_init.py
app/: main.py
app/core/: config.py
app/infrastructure/agent_database/: database.py
app/infrastructure/agent_database/models/: announcement.py  base.py  embedding.py  ingest.py
app/infrastructure/ai/: __init__.py  embedding.py  model.py
app/infrastructure/source_database/: database.py
app/infrastructure/source_database/models/: announcement.py
app/infrastructure/vector_store/: vector_store.py
app/service/agent/: schema.py
app/service/agent/graph/: graph.py
app/service/agent/nodes/: retrieval.py  rewriting.py
app/service/agent/schema/: intention.py  reference.py  response.py  state.py
